Prevent clipping focus outline in dialogs
REDMINE-19645

--- a/app/assets/stylesheets/pageflow/editor/files_explorer.scss
+++ b/app/assets/stylesheets/pageflow/editor/files_explorer.scss
@@ -17,8 +17,8 @@
 
   .entries_panel {
     width: 20%;
-    padding-right: space(1);
-    margin-right: space(1);
+    padding: 0 space(1) 0 space(1);
+    margin: 0 space(1) 0 space(-1);
 
     li.blank_slate {
       text-align: center;
